header file added one new tab

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,9 @@
         <li class="nav-item" routerLinkActive="active">
           <a class="nav-link" href="#" routerLink="/people">People</a>
         </li>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" href="#" routerLink="/people">Discover</a>
+        </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search Movie" aria-label="Search Movie"
