router changes done

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#" routerLink="/people">People</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" href="#" routerLink="/people">Discover</a>
+          <a class="nav-link" href="#" routerLink="/discover">Discover</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
